# hubchat

./: .gitignore  README.md  app.py  pyproject.toml
static/: styles.css
templates/: index.html  messages.html
